--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
     
     <footer>
-      <marquee>&copy;demo-roihanmuslimin.my.id</marquee>
+      <marquee>demo-roihanmuslimin.my.id</marquee>
     </footer>
     
   </body>
